--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,4 +80,8 @@ header:not(nav){
 
 h3{
     text-align: center;
+    background-image: linear-gradient(45deg, #FFD700, #FCC200, #FFD700, #E5BE01, #FCC200, #FFD700);
+    color:#333;
+    padding: 10px;
+    border-radius: 5px;
 }
